@@ -38,6 +38,10 @@
 <p>2020-03-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/pixel_cache.c (ModifyCache): Destroy clone_image.cache if
+ClonePixelCache() reports failure.  Fixes oss-fuzz 20871
+&quot;graphicsmagick:coder_MVG_fuzzer: Direct-leak in
+MagickMallocAligned&quot;.</li>
 <li>magick/log.c (LogMagickEventList): Prepare source module base
 name more efficiently.  Move MethodOutput implementation to the
 front so it is not filtered by other active blocks.
