@@ -1,5 +1,10 @@
 2020-03-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/pixel_cache.c (ModifyCache): Destroy clone_image.cache if
+	ClonePixelCache() reports failure.  Fixes oss-fuzz 20871
+	"graphicsmagick:coder_MVG_fuzzer: Direct-leak in
+	MagickMallocAligned".
+
 	* magick/log.c (LogMagickEventList): Prepare source module base
 	name more efficiently.  Move MethodOutput implementation to the
 	front so it is not filtered by other active blocks.
